--- a/SEM-1/DES-WEB/SITE/css/main.css
+++ b/SEM-1/DES-WEB/SITE/css/main.css
@@ -20,7 +20,6 @@
   width: 100%;
   text-align: center;
   padding-top: 20px;
-  font-family: 'Roboto', sans-serif;
 }
 #menu li{
   display: inline;
@@ -34,4 +33,25 @@
   border-radius: 2px;
   font-weight: bold;
 }
-
+#content{
+  padding-top: 150px;
+  width: 90%;
+  margin: 0 auto;
+}
+#content img{
+  width: 60%;;
+}
+p:first-child{
+  text-align: center;
+}
+#footer{
+  background-color: #191970;
+  padding: 10px;
+  width: 100%;
+  position: relative;
+  bottom: 0;
+  color: #fff;
+  text-align: center;
+}
+```
+```html
