--- a/SEM-1/DES-WEB/SITE/css/main.css
+++ b/SEM-1/DES-WEB/SITE/css/main.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
 }
+#container{
+  position: relative;
+  min-height: 100vh;
+}
 #header{
   background-color: #191970;
   padding: 10px;
@@ -26,6 +30,13 @@
   padding: 0 20px;
   list-style-type: none;
   cursor: pointer;
+  
+}
+#menu li a{
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.2rem;
+
 }
 #menu li:hover{
   padding-bottom: 0.4rem;
@@ -35,21 +46,34 @@
 }
 #content{
   padding-top: 150px;
+  padding-bottom: 60px;
   width: 90%;
   margin: 0 auto;
+}
+#content p{
+  font-size: 1.2rem;
+  line-height: 1.5;
+  padding: 10px 0;
 }
 #content img{
   width: 60%;;
 }
-p:first-child{
+#content p:first-child{
   text-align: center;
 }
 #footer{
   background-color: #191970;
   padding: 10px;
   width: 100%;
-  position: relative;
+  position: absolute;
   bottom: 0;
+  left: 0;
   color: #fff;
   text-align: center;
+}
+#footer p{
+  font-size: 0.8rem;
+  text-align: center;
+  color: #fff;
+  padding: 5px 0;
 }
